Added support for FreeBSD

--- a/TMXConverter/makefile
+++ b/TMXConverter/makefile
@@ -1,6 +1,6 @@
 build:
-	gcc TMXtoPng.c -Wall -std=gnu99 -lfreeimage -o TMXtoPng
-	gcc BINtoTmx.c -Wall -o BINtoTmx
+	cc TMXtoPng.c -Wall -std=gnu99 -lm -lfreeimage -o TMXtoPng
+	cc BINtoTmx.c -Wall -o BINtoTmx
 
 clean:
 	rm -f TMXtoPng
